# oxidity-searcher

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  Untitled Document  VERSION  address_code_report.json  audit.toml  config.example.toml  config.template.toml  config.testnet.example.toml  deny.toml  dist-workspace.toml  foundry.toml  merge.py  merged.rs  on1builder.db  oxidity-wallet-backend.service  oxidity_builder.db  oxidity_builder_fresh.db  scenario.md  wallet.oxidity.io.nginx.conf
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml  staging-live-smoke.yml
.github/workspaces/: CI.yml
app/: App.tsx  index.html  metadata.json  package.json  types.ts
app/components/: ConfigManager.tsx  Dashboard.tsx  Header.tsx  Logger.tsx  Mempool.tsx  Sidebar.tsx  StrategyManager.tsx
app/services/: audioService.ts  geminiService.ts
apps/site/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
apps/site/src/: App.tsx  index.css  vite-env.d.ts
apps/wallet/: .env.example  metadata.json  package-lock.json  package.json  vite.config.ts
apps/wallet/android/: keystore.properties.example
apps/wallet/scripts/: generate-licenses.mjs  package-extension.mjs
apps/wallet/src/: App.tsx  index.css
data/: MEVBundleExecutor.sol  OxidizedFlashExecutor.sol  UnifiedHardenedExecutor.sol  UnifiedHardenedExecutor_abi.json  UnifiedHardenedExecutor_bytecode..txt  UnifiedHardenedExecutor_constructor_arguments.txt  UnifiedHardenedExecutor_contract_creation_code.txt  UnifiedHardenedExecutor_settings.json  address_registry.json  chainlink_feeds.json  contract-map.json  global_data.json  pairs.json  publicnode_rpc_list.json  tokenlist.json
deploy/: install-host-runtime.sh
deploy/cloudflared/: cloudflared.env.example  cloudflared.service
deploy/nginx/: mitander.dev.conf.template  nginx.conf  oxidity-searcher-rate-limits.conf  oxidity.io.conf.template  render-wallet.sh  render.sh  wallet.oxidity.io.conf.template
deploy/systemd/: oxidity-searcher.service  oxidity-wallet-backend.service  searcher.env.example  wallet-backend.env.example  wallet-service.env.example  wallet-service.service
docs/: UnifiedHardenedExecutor-Threat-Model.md  changelog.md  cloudflare_api_schema.yaml  dependency-risk-acceptance.md  dev-helper.md  flashloan.md  infrastructure.md  oxidity.builder.1  setup.md  wallet-service.md
migrations/: 20260113000000_init.sql  20260128000000_profit_precision.sql  20260210000000_profit_cost_components.sql  20260215000000_baseline.sql  20260306150500_onboarding_requests.sql  20260307113000_wallet_activity.sql
migrations_legacy/: 20260113000000_init.sql  20260127000000_nonce_state.sql  20260203000000_router_discovery.sql
mitander.dev/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json
mitander.dev/public/: publickey.asc  robots.txt  site.webmanifest  sitemap.xml
mitander.dev/public/.well-known/: security.txt
mitander.dev/src/: App.tsx  index.css
mitander.dev/src/components/: Layout.tsx
mitander.dev/src/hooks/: usePartnerData.ts  usePublicData.ts
mitander.dev/src/lib/: formatters.ts  partnerSession.ts  publicData.ts  seo.ts  types.ts
mitander.dev/src/pages/: Dashboard.tsx  Developers.tsx  GaslessEthereumTransactions.tsx  Home.tsx  HowItWorks.tsx  MevProtection.tsx  Partners.tsx  PrivateEthereumRpc.tsx  RiskPolicy.tsx  TermsOfService.tsx
oxidity-wallet/: capacitor.config.ts  package-lock.json  vite.config.ts
oxidity-wallet/android/app/: build.gradle
oxidity-wallet/src/components/: BiometricPrompt.tsx  Logo.tsx
oxidity-wallet/src/lib/: api.ts  chainAddresses.ts  clipboard.ts  external.ts
oxidity-wallet/src/utils/: token.ts
oxidity-wallet/src/views/: AddressBookView.tsx  CreateWalletView.tsx  LegalView.tsx  MainView.tsx  SendView.tsx  SplashView.tsx  SupportView.tsx  WalkthroughView.tsx  WelcomeView.tsx
oxidity-webpage-app/: README.md  index.html  metadata.json  package-lock.json  package.json
oxidity-webpage-app/src/: App.tsx
oxidity.io/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json
oxidity.io/public/: robots.txt  site.webmanifest  sitemap.xml
oxidity.io/public/.well-known/: security.txt
oxidity.io/scripts/: sync-public-assets.mjs
oxidity.io/src/: App.tsx  index.css
oxidity.io/src/components/: Layout.tsx
oxidity.io/src/lib/: onboarding.ts  proof.ts  publicData.ts  seo.ts
oxidity.io/src/pages/: Dashboard.tsx  Developers.tsx  GaslessEthereumTransactions.tsx  Home.tsx  (+9 more)
scripts/: rebuild_global_data.sh  sync_readme_counts.py  test_nginx_ingress.py  verify_cloudflared_unit.sh
src/: config.rs  lib.rs  main.rs
src/app/: config.rs  logging.rs  mod.rs
src/common/: constants.rs  data_path.rs  global_data.rs  logger.rs  metrics.rs  mod.rs  parsing.rs  retry.rs  seen_cache.rs
src/core/: block_listener.rs  engine.rs  executor.rs  portfolio.rs  safety.rs  simulation.rs  strategy.rs
src/data/: flashloan_abi.rs  mod.rs
src/domain/: constants.rs  error.rs  mod.rs
src/infrastructure/: mod.rs
src/network/: gas.rs  mev_share.rs  provider.rs
src/services/: metrics.rs  mod.rs
src/wallet/: config.rs  mod.rs  server.rs  state.rs  types.rs
test/: UnifiedHardenedExecutor.t.sol
tests/: config_guard.rs  flashloan_build.rs  mev_share_pipeline.rs  migration_lint.rs  nethermind_rpc_compat.rs  pipeline_mev_share_v3.rs  unified_hardened_executor_invariants.rs  ws_check.py
tests/support/: mod.rs
wallet.oxidity.io/: .env.example  README.md  capacitor.config.ts  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
wallet.oxidity.io/public/: site.webmanifest
wallet.oxidity.io/scripts/: build-extension.mjs
wallet.oxidity.io/src/: App.tsx  index.css
(+130 files in other folders)
