[package]
name = "oxidity-builder"
version = "0.1.1-delta"
edition = "2024"
authors = ["oxidity.io | John Hauger Mitander"]
description = "Oxidity - MEV Searcher"
homepage = "https://build.oxidity.com/"
repository = "https://github.com/John0n1/oxidity-builder"
license = "MIT"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "1.0.149"
config = "0.15.19"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "fmt", "registry", "parking_lot"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
alloy = { version = "1.6.3", features = ["full", "node-bindings", "serde"] }
alloy-consensus = { version = "1.6.3", features = ["serde"] } 
alloy-primitives = { version = "1.5.4", features = ["serde"] } 
alloy-json-abi = "1.5.4" 
alloy-sol-types = { version = "1.5.4"}
alloy-rpc-client = "1.6.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono"] }
chrono = { version = "0.4.43", features = ["serde"] }
dashmap = "6.1.0" # Concurrent HashMap
futures = "0.3.31" 
reqwest = { version = "0.13.2", features = ["json", "stream", "blocking"] }
async-trait = "0.1.89"
lazy_static = "1.5.0"
url = "2.5.8"
hex = "0.4.3"
once_cell = "1.21.3"
clap = { version = "4.5.57", features = ["derive"] }
crypto-common = "0.2.0"

[dev-dependencies]
regex = "1.12.3"

[package.metadata.deb]
name = "oxidity-builder"

[package.metadata.wix]
product-name = "oxidity-builder"
