[package]
name = "oxidity-searcher"
version = "0.1.1-delta"
edition = "2024"
authors = ["https://oxidity.io | John Hauger Oxidity"]
description = "Oxidity Searcher is a MEV-Searcher on The Ethereum Mainnet chain"
homepage = "https://oxidity.io/"
repository = "https://github.com/John0n1/oxidity-searcher"
readme = "README.md"
license = "MIT"
categories = ["cryptography::cryptocurrencies"]
default-run = "oxidity-searcher"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = "0.7.18"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "1.0.149"
config = "0.15.22"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt", "registry", "parking_lot"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
alloy = { version = "1.8.3", default-features = false, features = [
    "std",
    "reqwest-native-tls",
    "consensus",
    "contract",
    "eips",
    "network",
    "provider-debug-api",
    "provider-http",
    "provider-ipc",
    "provider-ws",
    "rpc-types-eth",
    "rpc-types-trace",
    "serde",
    "signer-local",
    "sol-types",
] }
alloy-consensus = { version = "1.8.3", features = ["serde", "k256"] } 
alloy-primitives = { version = "1.5.7", features = ["serde"] } 
alloy-json-abi = "1.5.7" 
alloy-sol-types = { version = "1.5.7"}
alloy-rpc-client = "1.7.3"
alloy-rpc-types-engine = "1.7.3"
alloy-transport-http = { version = "1.7.3", features = ["jwt-auth"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0" # Concurrent HashMap
futures = "0.3.32" 
reqwest = { version = "0.13.2", features = ["json", "stream"] }
async-trait = "0.1.89"
lazy_static = "1.5.0"
url = "2.5.8"
hex = "0.4.3"
once_cell = "1.21.3"
clap = { version = "4.6.0", features = ["derive"] }
ipnet = "2.12.0"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
base64 = "0.22.1"
bs58 = "0.5.1"
ed25519-dalek = "2.2.0"

[dev-dependencies]
regex = "1.12.3"

[package.metadata.deb]
name = "oxidity-searcher"

[package.metadata.wix]
product-name = "oxidity-searcher"
